Mobile Alignment Fixed

--- a/style.css
+++ b/style.css
@@ -85,4 +85,7 @@ h3 {
     h2 {
         font-size: 18px;
     }
+    .btn {
+        padding: 4px 8px;
+    }
 }
